fix(NavigationRail): text overflow fixes

--- a/src/components/Widgets/NavigationRail/NavigationRail.css
+++ b/src/components/Widgets/NavigationRail/NavigationRail.css
@@ -101,6 +101,8 @@
     transition: color 200ms var(--emphasized-motion);
     max-width: 85%;
     text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .NavigationRailItem > .title {
